--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,7 @@ python-dotenv==1.0.1
 
 # Monitoring
 prometheus-client==0.20.0
+# Web server
+gunicorn==21.2.0
+gunicorn==21.2.0
+gunicorn==21.2.0
