--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI Pipeline
 
 on:
   push:
@@ -9,57 +9,75 @@ on:
 jobs:
   build-test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: "3.11"   # 3.11 is safer, 3.12 can break some libs
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
-      
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            echo "No requirements.txt found in repo root"
+          fi
+          # Ensure pytest is available
+          if ! python -c "import pytest" 2>/dev/null; then
+            pip install pytest
+          fi
+
       - name: Run tests
         run: |
-          pytest tests/ -v --tb=short || echo "Tests completed with some failures"
+          if [ -d tests ]; then
+            pytest -v
+          else
+            echo "No tests directory found, skipping tests"
+          fi
 
   docker-build-push:
     runs-on: ubuntu-latest
     needs: build-test
+    permissions:
+      contents: read
+      packages: write   # <-- required for GHCR push
+
     steps:
-      - uses: actions/checkout@v3
-      
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
-      - name: Login to GitHub Container Registry
+
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository }}/cicd-api
-          tags: |
-            type=raw,value=latest
-            type=sha,prefix={{branch}}-
+      - name: Build and push image
+        run: |
+          # repo formatted like: owner/repo
+          REPO_LOWER=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          # simplest: ghcr.io/owner/repo:latest
+          IMAGE_NAME=ghcr.io/$REPO_LOWER:latest
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./deployment/Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}/cicd-api:latest
-          cache-to: type=inline
+          echo "Building image: $IMAGE_NAME"
 
-      - name: Image digest
-        run: echo "Image pushed with digest ${{ steps.meta.outputs.digest }}"
+          # adjust path if your Dockerfile is elsewhere
+          if [ -f deployment/Dockerfile ]; then
+            docker build -t $IMAGE_NAME -f deployment/Dockerfile .
+          elif [ -f Dockerfile ]; then
+            docker build -t $IMAGE_NAME -f Dockerfile .
+          else
+            echo "No Dockerfile found at deployment/Dockerfile or ./Dockerfile"
+            exit 1
+          fi
+
+          docker push $IMAGE_NAME
